# QwertDvert

./: Cargo.toml  LICENSE  README.md  qwertdvert.desktop
scripts/: qwertdvert-manage.sh
systemd/user/: qwertdvert-daemon.service  qwertdvert-tray.service  qwertdvert.target
